--- a/index.html
+++ b/index.html
@@ -18,8 +18,47 @@
 
     <!-- ===== MAIN CSS ===== -->
     <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- 🌙 ☀️ -->
   </head>
   <body>
+    <!-- ===== HEADER SECTION ===== -->
+    <header class="header" id="header">
+      <div class="header__container container">
+        <a href="#" class="header__logo">
+          <img src="./img/favicon.svg" alt="" class="header__logo-icon" />
+          Literasi.
+        </a>
+
+        <div class="header__menu" id="header-menu">
+          <ul class="header__list">
+            <li class="header__item">
+              <a href="#" class="header__link">Home</a>
+            </li>
+            <li class="header__item">
+              <a href="#" class="header__link">Library</a>
+            </li>
+            <li class="header__item">
+              <a href="#" class="header__link">Bestseller</a>
+            </li>
+            <li class="header__item">
+              <a href="#" class="header__link">Authors</a>
+            </li>
+          </ul>
+
+          <!-- theme toggle -->
+          <div class="header__theme" id="theme-toggle">🌙</div>
+
+          <a href="#" class="header__button button">Create account</a>
+        </div>
+
+        <div class="header__toggle" id="header-toggle">
+          <i class="bx bx-grid-alt"></i>
+        </div>
+      </div>
+    </header>
+    <!-- ===== HEADER SECTION ===== -->
+
     <!-- ===== MAIN JS ===== -->
     <script src="./js/main.js"></script>
   </body>
