--- a/index.html
+++ b/index.html
@@ -59,6 +59,36 @@
     </header>
     <!-- ===== HEADER SECTION ===== -->
 
+    <main class="main">
+      <!-- ===== HOME SECTION ===== -->
+      <section class="home section">
+        <div class="home__container container">
+          <div class="home__data">
+            <h1 class="home__title section-title">
+              Buy and sell your <br />
+              textbooks for the <br />
+              best price.
+            </h1>
+            <p class="home__text section-text section-bottom">
+              From applied literature to educational resources, we have a lot of
+              textbooks to offer you. We provide only the best books for rent.
+            </p>
+            <form action="" class="home__form">
+              <input
+                type="email"
+                placeholder="Enter ISBN Number"
+                class="home__input"
+              />
+              <a href="#" class="home__button button">Search</a>
+            </form>
+          </div>
+
+          <img src="./img/home-img.png" alt="" class="home__img" />
+        </div>
+      </section>
+      <!-- ===== HOME SECTION ===== -->
+    </main>
+
     <!-- ===== MAIN JS ===== -->
     <script src="./js/main.js"></script>
   </body>
