change type home__form

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </p>
             <form action="" class="home__form">
               <input
-                type="email"
+                type="text"
                 placeholder="Enter ISBN Number"
                 class="home__input"
               />
